new commenting commit

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,20 @@
-# Stripe keys
-# https://dashboard.stripe.com/apikeys
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_12345
-STRIPE_SECRET_KEY=sk_12345
+# This is a block of code that sets Stripe keys for use in a web application.
+
+# 'NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY' is the publishable key for Stripe, which is used to
+# accept payments on the client side. It is labeled as 'NEXT_PUBLIC' to indicate that it
+# should be exposed to the client-side of the application.
+# You can find your publishable key in the Stripe Dashboard: https://dashboard.stripe.com/apikeys
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY = 'pk_12345'
+
+# 'STRIPE_SECRET_KEY' is the secret key for Stripe, which is used to perform server-side operations
+# such as creating charges and managing customers. It should be kept secret and not exposed to the
+# client-side of the application.
+# You can find your secret key in the Stripe Dashboard: https://dashboard.stripe.com/apikeys
+STRIPE_SECRET_KEY = 'sk_12345'
+
+# 'STRIPE_WEBHOOK_SECRET' is the webhook signing secret for Stripe, which is used to verify the
+# authenticity of webhook events sent by Stripe. It should be kept secret and not exposed to the
+# client-side of the application.
+# You can find your webhook signing secret in the Stripe Dashboard:
 # https://stripe.com/docs/webhooks/signatures
-STRIPE_WEBHOOK_SECRET=whsec_1234
+STRIPE_WEBHOOK_SECRET = 'whsec_1234'
