--- a/.env.local.example
+++ b/.env.local.example
@@ -1,6 +1,10 @@
-# Stripe keys
-# https://dashboard.stripe.com/apikeys
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=pk_12345
-STRIPE_SECRET_KEY=sk_12345
-# https://stripe.com/docs/webhooks/signatures
-STRIPE_WEBHOOK_SECRET=whsec_1234
+# Stripe API keys configuration
+
+# Public key for client-side payment processing
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="pk_12345"
+
+# Secret key for server-side payment processing
+STRIPE_SECRET_KEY="sk_12345"
+
+# Webhook signing secret for verifying event payloads
+STRIPE_WEBHOOK_SECRET="whsec_12345"
