--- a/.env.local.example
+++ b/.env.local.example
@@ -1,10 +1,21 @@
+ Here are the bugs in the code you provided:
+
+1. The public Stripe publishable key contains a typo in the variable name: `NEXT_PUBL,IC_STRIPE_PUBLISHABLE_KEY` should be `NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY`.
+2. The secret Stripe key has a comma in the middle of the variable name: `STRI,PE_SECRET_KEY` should be `STRIPE_SECRET_KEY`.
+3. The Stripe webhook secret also has an extra comma in the middle of the variable name: `STRIPE_WEB,HOOK_SECRET` should be `STRIPE_WEBHOOK_SECRET`.
+4. There are extra commas at the end of the lines for the secret key and the webhook secret, which will cause a syntax error.
+
+Here is the corrected code:
+
+```python
 # Stripe API keys configuration
 
-# Public key for client-side payment processing
-NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="pk_12345"
+# Public key, for client-side payment processing
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY = "pk_12345"
 
 # Secret key for server-side payment processing
-STRIPE_SECRET_KEY="sk_12345"
+STRIPE_SECRET_KEY = "sk_12345"
 
 # Webhook signing secret for verifying event payloads
-STRIPE_WEBHOOK_SECRET="whsec_12345"
+STRIPE_WEBHOOK_SECRET = "whsec_12345"
+```
