--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,13 @@
-# Hidden files created by macOS
-.DS_Store
+ Here are the bugs I found in the given code:
 
-# Configuration files for Visual Studio Code
-.vscode
+1. There are extra commas between some of the commented-out lines, which will cause syntax errors.
+2. Some of the file/directory names have typos, such as `.DS_Store` being written as `.DS_Stor,e`, `.vscode` being written as `,Configuration files for Visual Studio Co,de`, `node_modules` being written as `Node.js dependency directories,`, `dist` being written as `d,ist/`, `.next` being written as `.nex,t/`, `.vercel` being written as `.ve,rcel/`, and `.env` being written as `.en,v.local`.
+3. The `.env*` pattern for environment variable files is missing the final `.local` extension in the first occurrence.
+4. There are some unnecessary commas in the file/directory names, such as `node_modules/` being written as `node_,modules/` and `.env*.local` being written as `.env*.loc,al`.
 
-# Node.js dependency directories
-node_modules/
+Here is the corrected version of the code:
 
-# Compiled TypeScript files
-dist/
-
-# Next.js build output directories
-.next/
-.vercel/
-
-# Environment variable files
-.env*.local
-
-
+```
 # Hidden files created by macOS
 .DS_Store
 
@@ -35,5 +25,6 @@ dist/
 .vercel/
 
 # Environment variable files
-.env.local
+.env*.local
 .env.*.local
+```
